muikku/src/main/webapp/resources/theme-muikku/sass/muikku-file-field-component.scss
.muikku-file-input-field-file {
  margin-top: 8px;
  margin-bottom: 8px;
  position: relative;
}

.muikku-file-input-field-file-label {
  font-weight:400;
  position:absolute;
  margin-top:-35px;
  margin-left:10px;
  color:#fff;
  font-size:16px;
  line-height:27px;
}

.muikku-file-input-field-file-remove, .muikku-file-input-field-file-restore {
  display:block;
  text-decoration:none;
  position:absolute; 
  margin-top:-30px;
  right: 10px;
  font-weight:400 !important;
  position: absolute;
  color:#fff !important;
  font-size:14px;
}

.muikku-file-input-field-file-progress {
  border:1px solid #f8f8f8;
  box-shadow:0 0 5px rgba(0,0,0,0.05);
  height:30px;
  border-radius:0 !important;
  
  .ui-progressbar-value {
    background:#34acfd;
    height:30px;
    border-radius:0 !important;
  }

}

.muikku-file-input-field-file-remove {
  color: #f00;
}

.muikku-file-input-field-file-restore {
  color: #00f;
}

.muikku-file-input-field-file-uploader-container {
  position: relative;
  padding: 20px;
  margin: 0 10px;
  background: #fff;
  border: 1px solid #eee;
  transition: border,box-shadow 0.1s,0.2s ease-in-out;
  outline: none;
  box-shadow: 0 0 0px 3px rgba(215,215,215,0.15);
  border-radius: 3px;
  text-transform: uppercase;
  color: #186089;
  
  &:hover {
    border:1px solid #97bfed;
    box-shadow:0 0 0px 3px rgba(202,225,252,0.75);
  }
  
  a {
    color:#fff !important;
    text-decoration:none;
    font-size:14px;
    
    &:hover {
      text-decoration:underline;
    }
    
  }
  
}

.muikku-file-input-field-file-uploader-container input[type="file"] {
  width: 100%;
  opacity: 0;
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  cursor: pointer;
}

.muikku-file-input-field-file-uploader-container input[type="file"][disabled="disabled"] {
  cursor: default;
}

.muikku-file-input-field-file-uploader-container span {
  text-align: center;  
  display: block;
}

.muikku-file-input-field-file-removed .muikku-file-input-field-file-label {
  text-decoration:line-through;
}

